tests/golden/type_errors/typed_array_push_mismatch.cd
let xs: [number] = [1];
push(xs, "bad");
